--- a/tickets.html
+++ b/tickets.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/tickets.css">
 
-  <script src="./dist/main.bundle.js" defer></script>
+  <script src="./dist/tickets.bundle.js" defer></script>
 </head>
 <body class="tickets-bg">
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
